[gd_scene load_steps=16 format=3 uid="uid://bfchvfr2yseek"]

[ext_resource type="Script" uid="uid://btbhqx4hv1nob" path="res://scripts/GameManager.gd" id="1_ig4jx"]
[ext_resource type="Texture2D" uid="uid://du8m33l7gvebq" path="res://assets/Background.png" id="2_pn0ym"]
[ext_resource type="PackedScene" uid="uid://kg3kqfg2wqas" path="res://scenes/whale/whale.tscn" id="3_0o7gw"]
[ext_resource type="Texture2D" uid="uid://bs2g4sx2lk1wx" path="res://assets/BG_stars.png" id="3_pn0ym"]
[ext_resource type="PackedScene" uid="uid://kk2modep8asl" path="res://scenes/galaxy/galaxy.tscn" id="4_d3kax"]
[ext_resource type="Script" uid="uid://cge5hujdo2rbe" path="res://scenes/level/galaxy1.gd" id="5_lw8he"]
[ext_resource type="Script" uid="uid://eh3wbx02mj4p" path="res://scenes/level/galaxy2.gd" id="6_g35fm"]
[ext_resource type="Script" uid="uid://bm4ch6gyn6jl4" path="res://scenes/level/galaxy3.gd" id="7_g280g"]
[ext_resource type="PackedScene" uid="uid://esud7bwuxrjp" path="res://scenes/player/player.tscn" id="8_bften"]
[ext_resource type="PackedScene" uid="uid://ht2ucbxw6pqq" path="res://scenes/hud/hud.tscn" id="9_mr15t"]
[ext_resource type="Texture2D" uid="uid://8cbjnsf5soyh" path="res://assets/blue_whale.PNG" id="11_g35fm"]
[ext_resource type="Texture2D" uid="uid://cvuhsbokyoy4g" path="res://assets/brown_whale.PNG" id="12_g280g"]
[ext_resource type="Texture2D" uid="uid://dsn21er6ipt4q" path="res://assets/orange_whale.PNG" id="13_bften"]
[ext_resource type="Texture2D" uid="uid://dxd80r7kbesvk" path="res://assets/resonating_whale.PNG" id="14_mr15t"]

[sub_resource type="Environment" id="Environment_2hqms"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.0
glow_bloom = 0.45

[node name="Main" type="Node2D"]
script = ExtResource("1_ig4jx")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)

[node name="Space" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(960, 536)
scale = Vector2(3, 3)
texture = ExtResource("2_pn0ym")

[node name="Trail" type="Sprite2D" parent="."]
position = Vector2(792, 528)
scale = Vector2(2, 2)
texture = ExtResource("3_pn0ym")

[node name="Whale" parent="." instance=ExtResource("3_0o7gw")]
position = Vector2(888, 496)

[node name="Other_Whale1" type="Sprite2D" parent="."]
visible = false
position = Vector2(1728, 184)
texture = ExtResource("11_g35fm")

[node name="Other_Whale2" type="Sprite2D" parent="."]
visible = false
position = Vector2(1632, 888)
rotation = 0.332129
texture = ExtResource("12_g280g")

[node name="Other_Whale3" type="Sprite2D" parent="."]
visible = false
position = Vector2(336, 936)
rotation = -0.194106
texture = ExtResource("13_bften")
flip_h = true

[node name="Other_Whale4" type="Sprite2D" parent="."]
visible = false
position = Vector2(184, 96)
rotation = 0.414558
texture = ExtResource("14_mr15t")
flip_h = true

[node name="Galaxy" parent="." instance=ExtResource("4_d3kax")]
position = Vector2(-264, 408)
script = ExtResource("5_lw8he")

[node name="Galaxy2" parent="." instance=ExtResource("4_d3kax")]
position = Vector2(1776, -240)
script = ExtResource("6_g35fm")

[node name="Galaxy3" parent="." instance=ExtResource("4_d3kax")]
position = Vector2(1288, 1224)
script = ExtResource("7_g280g")

[node name="Player" parent="." instance=ExtResource("8_bften")]
position = Vector2(920, 216)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(1, 9)
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2hqms")

[node name="HudCanvas" type="CanvasLayer" parent="."]

[node name="Hud" parent="HudCanvas" instance=ExtResource("9_mr15t")]

[connection signal="body_entered" from="Galaxy" to="Galaxy" method="_on_body_entered"]
[connection signal="body_exited" from="Galaxy" to="Galaxy" method="_on_body_exited"]
[connection signal="body_entered" from="Galaxy2" to="Galaxy2" method="_on_body_entered"]
[connection signal="body_exited" from="Galaxy2" to="Galaxy2" method="_on_body_exited"]
[connection signal="body_entered" from="Galaxy3" to="Galaxy3" method="_on_body_entered"]
[connection signal="body_exited" from="Galaxy3" to="Galaxy3" method="_on_body_exited"]
